# 2nd-sem-project

./: BMICalculator.cpp  BodyTypeOptions.cpp  CMakeLists.txt  Ectomorph.cpp  Ectomorph.h  Endomorph.cpp  Endomorph.h  FitnessApp.cpp  FitnessApp.h  LoginUser.cpp  Mesomorph.cpp  Mesomorph.h  RegisterUser.cpp  Resource.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  weareone.pro
